Finish MekHQ
Signed-off-by: Richard J Hancock <rjhancock@tapenvy.us>